--- a/.github/workflows/1-2-build-complete.yml
+++ b/.github/workflows/1-2-build-complete.yml
@@ -137,7 +137,7 @@ jobs:
 
     - name: Create minimal rootfs
       run: |
-        mkdir -p rootfs/{bin,dev,etc,proc,sys,usr/bin,usr/lib,usr/local,var/cache/apk,tmp,home,wildan,root,.config}
+        mkdir -p rootfs/{bin,dev,etc,proc,sys,usr/bin,usr/lib,usr/local,var/cache/apk,tmp,home,wildan,root,.config,sbin,lib}
         cp busybox-1.36.1/busybox rootfs/bin/
         cp -r musl-1.2.4/install/usr/lib/* rootfs/usr/lib/
         
@@ -164,24 +164,27 @@ jobs:
         mkdir -p rootfs/etc/apk/keys
         
         # Setup APK repositories
-        cat > rootfs/etc/apk/repositories << EOF
-        http://dl-cdn.alpinelinux.org/alpine/v3.19/main
-        http://dl-cdn.alpinelinux.org/alpine/v3.19/community
-        EOF
+        echo "http://dl-cdn.alpinelinux.org/alpine/v3.19/main" > rootfs/etc/apk/repositories
+        echo "http://dl-cdn.alpinelinux.org/alpine/v3.19/community" >> rootfs/etc/apk/repositories
         
-        # Download and setup Alpine keys
-        wget -O rootfs/etc/apk/keys/alpine-devel@lists.alpinelinux.org-6165ee59.rsa.pub \
-          http://dl-cdn.alpinelinux.org/alpine/v3.19/main/aarch64/alpine-keys-2.4-r1.apk
+        # Download Alpine keys
+        wget http://dl-cdn.alpinelinux.org/alpine/v3.19/main/aarch64/alpine-keys-2.4-r1.apk
         tar -xzf alpine-keys-2.4-r1.apk
-        cp etc/apk/keys/* rootfs/etc/apk/keys/
+        cp -r etc/apk/keys/* rootfs/etc/apk/keys/
 
     - name: Install Alpine packages using QEMU
       run: |
         # Copy QEMU static binary for chroot
         cp /usr/bin/qemu-aarch64-static rootfs/usr/bin/
+        chmod +x rootfs/usr/bin/qemu-aarch64-static
+        
+        # Setup basic files for Alpine
+        echo "nameserver 8.8.8.8" > rootfs/etc/resolv.conf
+        echo "zen-unix" > rootfs/etc/hostname
         
         # Chroot and install packages
         sudo chroot rootfs /sbin/apk.static update
+        sudo chroot rootfs /sbin/apk.static add --no-cache alpine-base
         sudo chroot rootfs /sbin/apk.static add --no-cache \
           bash curl wget nano htop neofetch git openssh tmux tree bat ripgrep fd fzf jq \
           figlet lolcat cmatrix go build-base cmake pkgconfig util-linux e2fsprogs kbd kmod \
@@ -190,83 +193,89 @@ jobs:
         # Remove QEMU binary after use
         rm rootfs/usr/bin/qemu-aarch64-static
 
-    - name: Create custom init script with Alpine
+    - name: Create custom init script
       run: |
-        cat > rootfs/init << 'EOF'
-#!/bin/bash
-# Zen Unix Init Script - by Wildan Hermawan
-
-# Mount filesystems
-mount -t proc none /proc
-mount -t sysfs none /sys
-mount -t devtmpfs none /dev
-
-# Create device nodes if needed
-mknod /dev/console c 5 1 2>/dev/null || true
-mknod /dev/null c 1 3 2>/dev/null || true
-
-# Setup network
-mkdir -p /var/run/dhcpcd
-dhcpcd lo &
-
-# Display welcome message
-clear
-echo "================================================"
-figlet "Zen Unix" | lolcat
-echo "================================================"
-echo "🐧  ARM64 Linux Distro by Wildan Hermawan"
-echo "📱  GitHub: https://github.com/sfiraz"
-echo "🚀  Kernel: $(uname -r)"
-echo "💻  $(neofetch --stdout | head -1)"
-echo "================================================"
-echo ""
-
-# Start SSH server if available
-if [ -f /usr/sbin/sshd ]; then
-    /usr/sbin/sshd &
-    echo "🔐 SSH server started on port 22"
-fi
-
-# Start shell
-exec /bin/bash
-EOF
+        echo '#!/bin/bash' > rootfs/init
+        echo '# Zen Unix Init Script - by Wildan Hermawan' >> rootfs/init
+        echo '' >> rootfs/init
+        echo '# Mount filesystems' >> rootfs/init
+        echo 'mount -t proc none /proc' >> rootfs/init
+        echo 'mount -t sysfs none /sys' >> rootfs/init
+        echo 'mount -t devtmpfs none /dev' >> rootfs/init
+        echo '' >> rootfs/init
+        echo '# Create device nodes if needed' >> rootfs/init
+        echo 'mknod /dev/console c 5 1 2>/dev/null || true' >> rootfs/init
+        echo 'mknod /dev/null c 1 3 2>/dev/null || true' >> rootfs/init
+        echo '' >> rootfs/init
+        echo '# Setup network' >> rootfs/init
+        echo 'mkdir -p /var/run/dhcpcd' >> rootfs/init
+        echo 'dhcpcd lo &' >> rootfs/init
+        echo '' >> rootfs/init
+        echo '# Display welcome message' >> rootfs/init
+        echo 'clear' >> rootfs/init
+        echo 'echo "================================================"' >> rootfs/init
+        echo 'echo "    ___    _   _   ___   _   _   ___"' >> rootfs/init
+        echo 'echo "   |__ \\  | \\ | | |__ \\ | \\ | | / _ \\"' >> rootfs/init
+        echo 'echo "      ) | |  \\| |    ) ||  \\| || | | |"' >> rootfs/init
+        echo 'echo "     / /  | . ` |   / / | . ` || | | |"' >> rootfs/init
+        echo 'echo "    / /_  | |\\  |  / /_ | |\\  || |_| |"' >> rootfs/init
+        echo 'echo "   |____| |_| \\_| |____||_| \\_| \\___/"' >> rootfs/init
+        echo 'echo "================================================"' >> rootfs/init
+        echo 'echo "🐧  ARM64 Linux Distro by Wildan Hermawan"' >> rootfs/init
+        echo 'echo "📱  GitHub: https://github.com/sfiraz"' >> rootfs/init
+        echo 'echo "🚀  Kernel: $(uname -r)"' >> rootfs/init
+        echo 'echo "💻  Alpine Linux with APK package manager"' >> rootfs/init
+        echo 'echo "================================================"' >> rootfs/init
+        echo 'echo ""' >> rootfs/init
+        echo '' >> rootfs/init
+        echo '# Start SSH server if available' >> rootfs/init
+        echo 'if [ -f /usr/sbin/sshd ]; then' >> rootfs/init
+        echo '    /usr/sbin/sshd &' >> rootfs/init
+        echo '    echo "🔐 SSH server started on port 22"' >> rootfs/init
+        echo 'fi' >> rootfs/init
+        echo '' >> rootfs/init
+        echo '# Start shell' >> rootfs/init
+        echo 'exec /bin/bash' >> rootfs/init
         chmod +x rootfs/init
 
     - name: Create user profile and customization
       run: |
         # Create .bashrc with customizations
-        cat > rootfs/root/.bashrc << 'EOF'
-# Zen Unix Custom Bashrc
-export PS1='\[\033[1;32m\]\u@zen-unix\[\033[0m\]:\[\033[1;34m\]\w\[\033[0m\]\$ '
-
-# Aliases
-alias ls='ls --color=auto'
-alias ll='ls -la'
-alias la='ls -A'
-alias grep='grep --color=auto'
-alias cat='bat'
-alias find='fd'
-alias ..='cd ..'
-alias ...='cd ../..'
-
-# Functions
-zenfetch() {
-    clear
-    echo "================================================"
-    figlet "Zen Unix" | lolcat
-    echo "================================================"
-    echo "🐧  ARM64 Linux by Wildan Hermawan"
-    echo "📱  GitHub: https://github.com/sfiraz"
-    echo "🚀  $(uname -srm)"
-    echo "💻  $(cat /etc/alpine-release 2>/dev/null || echo 'Musl Linux')"
-    echo "================================================"
-}
-
-# Welcome message
-zenfetch
-echo "Type 'zenfetch' to show this info again"
-echo "Available tools: bash, curl, wget, nano, htop, git, tmux, go, etc."
-EOF
+        echo '# Zen Unix Custom Bashrc' > rootfs/root/.bashrc
+        echo 'export PS1='"'"'\[\033[1;32m\]\u@zen-unix\[\033[0m\]:\[\033[1;34m\]\w\[\033[0m\]\$ '"'" >> rootfs/root/.bashrc
+        echo '' >> rootfs/root/.bashrc
+        echo '# Aliases' >> rootfs/root/.bashrc
+        echo "alias ls='ls --color=auto'" >> rootfs/root/.bashrc
+        echo "alias ll='ls -la'" >> rootfs/root/.bashrc
+        echo "alias la='ls -A'" >> rootfs/root/.bashrc
+        echo "alias grep='grep --color=auto'" >> rootfs/root/.bashrc
+        echo "alias cat='bat'" >> rootfs/root/.bashrc
+        echo "alias find='fd'" >> rootfs/root/.bashrc
+        echo "alias ..='cd ..'" >> rootfs/root/.bashrc
+        echo "alias ...='cd ../..'" >> rootfs/root/.bashrc
+        echo '' >> rootfs/root/.bashrc
+        echo '# Functions' >> rootfs/root/.bashrc
+        echo 'zenfetch() {' >> rootfs/root/.bashrc
+        echo '    clear' >> rootfs/root/.bashrc
+        echo '    echo "================================================"' >> rootfs/root/.bashrc
+        echo '    echo "    ___    _   _   ___   _   _   ___"' >> rootfs/root/.bashrc
+        echo '    echo "   |__ \\  | \\ | | |__ \\ | \\ | | / _ \\"' >> rootfs/root/.bashrc
+        echo '    echo "      ) | |  \\| |    ) ||  \\| || | | |"' >> rootfs/root/.bashrc
+        echo '    echo "     / /  | . ` |   / / | . ` || | | |"' >> rootfs/root/.bashrc
+        echo '    echo "    / /_  | |\\  |  / /_ | |\\  || |_| |"' >> rootfs/root/.bashrc
+        echo '    echo "   |____| |_| \\_| |____||_| \\_| \\___/"' >> rootfs/root/.bashrc
+        echo '    echo "================================================"' >> rootfs/root/.bashrc
+        echo '    echo "🐧  ARM64 Linux by Wildan Hermawan"' >> rootfs/root/.bashrc
+        echo '    echo "📱  GitHub: https://github.com/sfiraz"' >> rootfs/root/.bashrc
+        echo '    echo "🚀  $(uname -srm)"' >> rootfs/root/.bashrc
+        echo '    echo "💻  Alpine Linux $(cat /etc/alpine-release 2>/dev/null || echo '"'"'Musl Linux'"'"')"' >> rootfs/root/.bashrc
+        echo '    echo "================================================"' >> rootfs/root/.bashrc
+        echo '}' >> rootfs/root/.bashrc
+        echo '' >> rootfs/root/.bashrc
+        echo '# Welcome message' >> rootfs/root/.bashrc
+        echo 'zenfetch' >> rootfs/root/.bashrc
+        echo 'echo "Type '"'"'zenfetch'"'"' to show this info again"' >> rootfs/root/.bashrc
+        echo 'echo "Available tools: bash, curl, wget, nano, htop, git, tmux, go, etc."' >> rootfs/root/.bashrc
 
         # Copy .bashrc to home directory
         cp rootfs/root/.bashrc rootfs/home/
@@ -275,27 +284,23 @@ EOF
       run: |
         # Setup Go environment
         mkdir -p rootfs/home/go/{bin,src,pkg}
-        cat >> rootfs/root/.bashrc << 'EOF'
-
-# Go environment
-export GOPATH=/home/go
-export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin
-EOF
+        echo '' >> rootfs/root/.bashrc
+        echo '# Go environment' >> rootfs/root/.bashrc
+        echo 'export GOPATH=/home/go' >> rootfs/root/.bashrc
+        echo 'export PATH=$PATH:/usr/local/go/bin:$GOPATH/bin' >> rootfs/root/.bashrc
 
         # Create sample Go program
         mkdir -p rootfs/home/wildan/hello
-        cat > rootfs/home/wildan/hello/main.go << 'EOF'
-package main
-
-import "fmt"
-
-func main() {
-    fmt.Println("🐧 Welcome to Zen Unix!")
-    fmt.Println("📱 ARM64 Linux by Wildan Hermawan")
-    fmt.Println("🚀 Powered by Go")
-    fmt.Printf("💻 Architecture: %s\n", "aarch64")
-}
-EOF
+        echo 'package main' > rootfs/home/wildan/hello/main.go
+        echo '' >> rootfs/home/wildan/hello/main.go
+        echo 'import "fmt"' >> rootfs/home/wildan/hello/main.go
+        echo '' >> rootfs/home/wildan/hello/main.go
+        echo 'func main() {' >> rootfs/home/wildan/hello/main.go
+        echo '    fmt.Println("🐧 Welcome to Zen Unix!")' >> rootfs/home/wildan/hello/main.go
+        echo '    fmt.Println("📱 ARM64 Linux by Wildan Hermawan")' >> rootfs/home/wildan/hello/main.go
+        echo '    fmt.Println("🚀 Powered by Go")' >> rootfs/home/wildan/hello/main.go
+        echo '    fmt.Printf("💻 Architecture: %s\n", "aarch64")' >> rootfs/home/wildan/hello/main.go
+        echo '}' >> rootfs/home/wildan/hello/main.go
 
     - name: Create essential device nodes
       run: |
@@ -328,7 +333,7 @@ EOF
         echo "✅ Build completed successfully!"
         echo "📦 Final artifacts: zen-unix.img + Kernel Image"
         echo "🐧 Included packages:"
-        echo "   - Core: bash, musl, busybox, apk"
+        echo "   - Core: bash, musl, busybox, alpine-base"
         echo "   - Tools: curl, wget, nano, htop, neofetch"
         echo "   - Dev: git, go, build-base, cmake"
         echo "   - CLI UX: tmux, tree, bat, ripgrep, fd, fzf, jq"
