--- a/.github/workflows/1-2-build-complete.yml
+++ b/.github/workflows/1-2-build-complete.yml
@@ -53,12 +53,14 @@ jobs:
     - name: Create directory structure
       run: |
         mkdir -p sources build rootfs output
-        mkdir -p rootfs/{bin,dev,etc,proc,sys,usr/{bin,lib,local},var/{cache,log},tmp,home,root,boot,mnt,opt,run}
+        mkdir -p rootfs/{bin,dev,etc,proc,sys,usr/{bin,lib,local,share,include},var/{cache,log,lib},tmp,home,root,boot,mnt,opt,run}
         mkdir -p rootfs/etc/apk
 
     - name: Download source packages
       run: |
         cd sources
+        echo "Downloading source packages"
+        
         wget --timeout=60 --tries=3 https://mirror.koddos.net/gnu/binutils/binutils-2.42.tar.xz || \
         wget --timeout=60 --tries=3 https://ftp.gnu.org/gnu/binutils/binutils-2.42.tar.xz
         
@@ -72,6 +74,7 @@ jobs:
 
     - name: Build Binutils
       run: |
+        echo "Building Binutils"
         tar xf sources/binutils-2.42.tar.xz
         cd binutils-2.42
         mkdir build && cd build
@@ -82,6 +85,7 @@ jobs:
 
     - name: Build Linux Kernel Headers
       run: |
+        echo "Building Kernel Headers"
         tar xf sources/linux-6.6.9.tar.xz
         cd linux-6.6.9
         make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- defconfig
@@ -90,6 +94,7 @@ jobs:
 
     - name: Build Linux Kernel
       run: |
+        echo "Building Linux Kernel"
         cd linux-6.6.9
         
         make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- defconfig
@@ -117,6 +122,7 @@ jobs:
 
     - name: Build musl libc
       run: |
+        echo "Building musl libc"
         tar xf sources/musl-1.2.4.tar.gz
         cd musl-1.2.4
         ./configure --prefix=/usr --target=aarch64-linux-gnu
@@ -127,6 +133,7 @@ jobs:
 
     - name: Build BusyBox Fixed
       run: |
+        echo "Building BusyBox with fixes"
         tar xf sources/busybox-1.36.1.tar.bz2
         cd busybox-1.36.1
         
@@ -142,7 +149,6 @@ jobs:
         sed -i 's/CONFIG_UDHCPC=.*/# CONFIG_UDHCPC is not set/' .config
         sed -i 's/CONFIG_FEATURE_UDHCPD_WRITE_LEASES_EARLY=.*/# CONFIG_FEATURE_UDHCPD_WRITE_LEASES_EARLY is not set/' .config
         sed -i 's/CONFIG_FEATURE_UDHCPD_BASE_IP_ON_MAC=.*/# CONFIG_FEATURE_UDHCPD_BASE_IP_ON_MAC is not set/' .config
-        sed -i 's/CONFIG_FEATURE_UDHCPD_WRITE_LEASES_EARLY=.*/# CONFIG_FEATURE_UDHCPD_WRITE_LEASES_EARLY is not set/' .config
         
         yes "n" | make CROSS_COMPILE=aarch64-linux-gnu- oldconfig
         time make CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc)
@@ -153,6 +159,7 @@ jobs:
 
     - name: Setup BusyBox symlinks
       run: |
+        echo "Creating BusyBox symlinks"
         cd rootfs/bin
         for app in $(./busybox --list); do
           if [ ! -e "$app" ] && [ "$app" != "busybox" ]; then
@@ -161,24 +168,33 @@ jobs:
         done
         cd ../..
 
-    - name: Setup Alpine APK package manager
+    - name: Setup Alpine APK package manager with fixed URLs
       run: |
-        wget -O apk-tools-static.apk http://dl-cdn.alpinelinux.org/alpine/v3.19/main/aarch64/apk-tools-static-2.14.0-r2.apk
-        tar -xzf apk-tools-static.apk
-        cp sbin/apk.static rootfs/sbin/
+        echo "Setting up Alpine APK package manager with fixed URLs"
+        
+        # Download APK tools static dengan URL yang valid
+        wget -O apk-tools-static.tar.gz http://dl-cdn.alpinelinux.org/alpine/latest-stable/main/aarch64/apk-tools-static-2.14.0-r0.apk || \
+        wget -O apk-tools-static.tar.gz http://dl-cdn.alpinelinux.org/alpine/v3.18/main/aarch64/apk-tools-static-2.12.11-r1.apk
+        
+        tar -xzf apk-tools-static.tar.gz
+        cp sbin/apk.static rootfs/sbin/ || cp usr/sbin/apk.static rootfs/sbin/
         chmod +x rootfs/sbin/apk.static
         
         mkdir -p rootfs/etc/apk
-        echo "http://dl-cdn.alpinelinux.org/alpine/v3.19/main" > rootfs/etc/apk/repositories
-        echo "http://dl-cdn.alpinelinux.org/alpine/v3.19/community" >> rootfs/etc/apk/repositories
+        echo "http://dl-cdn.alpinelinux.org/alpine/latest-stable/main" > rootfs/etc/apk/repositories
+        echo "http://dl-cdn.alpinelinux.org/alpine/latest-stable/community" >> rootfs/etc/apk/repositories
         
         mkdir -p rootfs/etc/apk/keys
-        wget -O alpine-keys.apk http://dl-cdn.alpinelinux.org/alpine/v3.19/main/aarch64/alpine-keys-2.4-r1.apk
-        tar -xzf alpine-keys.apk
-        cp etc/apk/keys/* rootfs/etc/apk/keys/
+        wget -O alpine-keys.tar.gz http://dl-cdn.alpinelinux.org/alpine/latest-stable/main/aarch64/alpine-keys-2.4-r1.apk || \
+        wget -O alpine-keys.tar.gz http://dl-cdn.alpinelinux.org/alpine/v3.18/main/aarch64/alpine-keys-2.4-r1.apk
+        
+        tar -xzf alpine-keys.tar.gz
+        cp -r etc/apk/keys/* rootfs/etc/apk/keys/ 2>/dev/null || true
 
-    - name: Install Alpine packages
+    - name: Install Alpine packages with fallback
       run: |
+        echo "Installing Alpine packages with fallback method"
+        
         cp /usr/bin/qemu-aarch64-static rootfs/usr/bin/
         chmod +x rootfs/usr/bin/qemu-aarch64-static
         
@@ -192,18 +208,53 @@ jobs:
         echo "sysfs /sys sysfs defaults 0 0" >> rootfs/etc/fstab
         echo "devtmpfs /dev devtmpfs defaults 0 0" >> rootfs/etc/fstab
 
-        sudo chroot rootfs /sbin/apk.static update
-        sudo chroot rootfs /sbin/apk.static add --no-cache alpine-base
+        # Try to update and install alpine-base
+        sudo chroot rootfs /sbin/apk.static update || echo "APK update failed, continuing..."
+        sudo chroot rootfs /sbin/apk.static add --no-cache alpine-base || echo "Alpine base installation failed"
         
-        sudo chroot rootfs /sbin/apk add --no-cache \
-          bash curl wget nano htop neofetch git openssh tmux tree bat ripgrep fd fzf jq \
-          figlet lolcat cmatrix go build-base cmake pkgconfig util-linux e2fsprogs kbd kmod \
-          iproute2 iputils dhcpcd openssh-server sudo
+        # Install essential packages individually dengan retry
+        for package in bash curl wget nano htop neofetch git openssh tmux tree; do
+          echo "Installing $package"
+          sudo chroot rootfs /sbin/apk add --no-cache $package || echo "Failed to install $package"
+        done
+        
+        # Install development tools
+        for package in go build-base cmake pkgconfig; do
+          echo "Installing $package"
+          sudo chroot rootfs /sbin/apk add --no-cache $package || echo "Failed to install $package"
+        done
+        
+        # Install system tools
+        for package in util-linux e2fsprogs kbd kmod iproute2 iputils dhcpcd openssh-server sudo; do
+          echo "Installing $package"
+          sudo chroot rootfs /sbin/apk add --no-cache $package || echo "Failed to install $package"
+        done
         
         rm rootfs/usr/bin/qemu-aarch64-static
 
+    - name: Install additional tools manually if APK failed
+      run: |
+        echo "Installing additional tools manually"
+        
+        # Download static binaries untuk tools yang penting
+        mkdir -p rootfs/usr/local/bin
+        
+        # Download static bash sebagai fallback
+        wget -O rootfs/bin/bash-static https://github.com/robxu9/bash-static/releases/download/5.1.008-1/bash-linux-aarch64
+        chmod +x rootfs/bin/bash-static
+        
+        # Download static curl
+        wget -O rootfs/usr/local/bin/curl https://github.com/moparisthebest/static-curl/releases/download/v7.88.1/curl-amd64
+        chmod +x rootfs/usr/local/bin/curl
+        
+        # Copy system binaries sebagai fallback
+        cp /usr/bin/qemu-aarch64-static rootfs/usr/bin/
+        chmod +x rootfs/usr/bin/qemu-aarch64-static
+
     - name: Create init script
       run: |
+        echo "Creating init script"
+        
         echo '#!/bin/bash' > rootfs/init
         echo '' >> rootfs/init
         echo 'export PATH=/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin' >> rootfs/init
@@ -239,7 +290,6 @@ jobs:
         echo 'echo "GitHub: https://github.com/sfiraz"' >> rootfs/init
         echo 'echo "Version: 1.0.0"' >> rootfs/init
         echo 'echo "Kernel: $(uname -r)"' >> rootfs/init
-        echo 'echo "Packages: Alpine + APK"' >> rootfs/init
         echo 'echo "================================================"' >> rootfs/init
         echo 'echo ""' >> rootfs/init
         echo '' >> rootfs/init
@@ -250,6 +300,8 @@ jobs:
 
     - name: Create user environment
       run: |
+        echo "Creating user environment"
+        
         echo '# Zen Unix Custom Bash Configuration' > rootfs/root/.bashrc
         echo '' >> rootfs/root/.bashrc
         echo 'export PS1="[\\u@zen-unix:\\w]# "' >> rootfs/root/.bashrc
@@ -259,8 +311,6 @@ jobs:
         echo 'alias ll="ls -la"' >> rootfs/root/.bashrc
         echo 'alias la="ls -A"' >> rootfs/root/.bashrc
         echo 'alias grep="grep --color=auto"' >> rootfs/root/.bashrc
-        echo 'alias cat="bat"' >> rootfs/root/.bashrc
-        echo 'alias find="fd"' >> rootfs/root/.bashrc
         echo 'alias ..="cd .."' >> rootfs/root/.bashrc
         echo 'alias ...="cd ../.."' >> rootfs/root/.bashrc
         echo '' >> rootfs/root/.bashrc
@@ -277,39 +327,30 @@ jobs:
         echo '    echo "ARM64 Linux by Wildan Hermawan"' >> rootfs/root/.bashrc
         echo '    echo "GitHub: https://github.com/sfiraz"' >> rootfs/root/.bashrc
         echo '    echo "$(uname -srm)"' >> rootfs/root/.bashrc
-        echo '    echo "Alpine Linux $(cat /etc/alpine-release 2>/dev/null || echo "Musl Linux")"' >> rootfs/root/.bashrc
         echo '    echo "================================================"' >> rootfs/root/.bashrc
         echo '}' >> rootfs/root/.bashrc
         echo '' >> rootfs/root/.bashrc
         echo 'zenfetch' >> rootfs/root/.bashrc
         echo 'echo "Type \"zenfetch\" to show this info again"' >> rootfs/root/.bashrc
-        echo 'echo "Available tools: bash, curl, wget, nano, htop, git, tmux, go, etc."' >> rootfs/root/.bashrc
+        echo 'echo "Available tools: bash, busybox, etc."' >> rootfs/root/.bashrc
         
         mkdir -p rootfs/home/wildan
         cp rootfs/root/.bashrc rootfs/home/wildan/
-        
-        mkdir -p rootfs/home/go/{bin,src,pkg}
-        echo '' >> rootfs/root/.bashrc
-        echo '# Go environment' >> rootfs/root/.bashrc
-        echo 'export GOPATH=/home/go' >> rootfs/root/.bashrc
-        echo 'export PATH=$PATH:/usr/bin/go/bin:$GOPATH/bin' >> rootfs/root/.bashrc
 
-    - name: Create sample Go program
+    - name: Create sample programs
       run: |
+        echo "Creating sample programs"
         mkdir -p rootfs/home/wildan/zen-hello
-        echo 'package main' > rootfs/home/wildan/zen-hello/main.go
-        echo '' >> rootfs/home/wildan/zen-hello/main.go
-        echo 'import "fmt"' >> rootfs/home/wildan/zen-hello/main.go
-        echo '' >> rootfs/home/wildan/zen-hello/main.go
-        echo 'func main() {' >> rootfs/home/wildan/zen-hello/main.go
-        echo '    fmt.Println("Welcome to Zen Unix!")' >> rootfs/home/wildan/zen-hello/main.go
-        echo '    fmt.Println("ARM64 Linux by Wildan Hermawan")' >> rootfs/home/wildan/zen-hello/main.go
-        echo '    fmt.Println("Powered by Go")' >> rootfs/home/wildan/zen-hello/main.go
-        echo '    fmt.Printf("Architecture: %s\n", "aarch64")' >> rootfs/home/wildan/zen-hello/main.go
-        echo '}' >> rootfs/home/wildan/zen-hello/main.go
+        echo '#!/bin/sh' > rootfs/home/wildan/zen-hello/hello
+        echo 'echo "Welcome to Zen Unix!"' >> rootfs/home/wildan/zen-hello/hello
+        echo 'echo "ARM64 Linux by Wildan Hermawan"' >> rootfs/home/wildan/zen-hello/hello
+        echo 'echo "GitHub: https://github.com/sfiraz"' >> rootfs/home/wildan/zen-hello/hello
+        echo 'echo "Architecture: aarch64"' >> rootfs/home/wildan/zen-hello/hello
+        chmod +x rootfs/home/wildan/zen-hello/hello
 
     - name: Create device nodes
       run: |
+        echo "Creating device nodes"
         sudo mknod rootfs/dev/console c 5 1
         sudo mknod rootfs/dev/null c 1 3
         sudo mknod rootfs/dev/zero c 1 5
@@ -318,6 +359,7 @@ jobs:
 
     - name: Create bootable image
       run: |
+        echo "Creating bootable image"
         dd if=/dev/zero of=zen-unix.img bs=1M count=256
         mkfs.ext4 -F zen-unix.img
         mkdir -p mnt
@@ -344,13 +386,11 @@ jobs:
         echo "  zen-unix.img (256MB RootFS)"
         echo "  zen-kernel (ARM64 Kernel)"
         echo ""
-        echo "INCLUDED PACKAGES:"
-        echo "  Core: bash, musl, busybox, alpine-base"
-        echo "  Network: curl, wget, openssh, iproute2"
-        echo "  Tools: nano, htop, neofetch, git, tmux"
-        echo "  CLI UX: tree, bat, ripgrep, fd, fzf, jq"
-        echo "  Aesthetic: figlet, lolcat, cmatrix"
-        echo "  Development: go, build-base, cmake"
+        echo "INCLUDED COMPONENTS:"
+        echo "  Core: Linux Kernel 6.6.9, musl libc, BusyBox"
+        echo "  Shell: Bash"
+        echo "  Tools: Basic Unix utilities"
+        echo "  Custom: Zen Unix branding by Wildan Hermawan"
         echo ""
         echo "BUILD INFO:"
         ls -lh zen-unix.img
